--- a/SDL_custom_quizz_game/SDL_custom_quizz_game.vcxproj
+++ b/SDL_custom_quizz_game/SDL_custom_quizz_game.vcxproj
@@ -11,93 +11,104 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\begin_code.h" />
-    <ClInclude Include="include\close_code.h" />
+    <ClInclude Include="include\CBuzzCommand.h" />
     <ClInclude Include="include\CLTexture.h" />
     <ClInclude Include="include\CLWindow.h" />
-    <ClInclude Include="include\SDL.h" />
-    <ClInclude Include="include\SDL_assert.h" />
-    <ClInclude Include="include\SDL_atomic.h" />
-    <ClInclude Include="include\SDL_audio.h" />
-    <ClInclude Include="include\SDL_bits.h" />
-    <ClInclude Include="include\SDL_blendmode.h" />
-    <ClInclude Include="include\SDL_clipboard.h" />
-    <ClInclude Include="include\SDL_config.h" />
-    <ClInclude Include="include\SDL_config_android.h" />
-    <ClInclude Include="include\SDL_config_iphoneos.h" />
-    <ClInclude Include="include\SDL_config_macosx.h" />
-    <ClInclude Include="include\SDL_config_minimal.h" />
-    <ClInclude Include="include\SDL_config_pandora.h" />
-    <ClInclude Include="include\SDL_config_psp.h" />
-    <ClInclude Include="include\SDL_config_windows.h" />
-    <ClInclude Include="include\SDL_config_winrt.h" />
-    <ClInclude Include="include\SDL_config_wiz.h" />
-    <ClInclude Include="include\SDL_copying.h" />
-    <ClInclude Include="include\SDL_cpuinfo.h" />
-    <ClInclude Include="include\SDL_egl.h" />
-    <ClInclude Include="include\SDL_endian.h" />
-    <ClInclude Include="include\SDL_error.h" />
-    <ClInclude Include="include\SDL_events.h" />
-    <ClInclude Include="include\SDL_filesystem.h" />
-    <ClInclude Include="include\SDL_gamecontroller.h" />
-    <ClInclude Include="include\SDL_gesture.h" />
-    <ClInclude Include="include\SDL_haptic.h" />
-    <ClInclude Include="include\SDL_hints.h" />
-    <ClInclude Include="include\SDL_image.h" />
-    <ClInclude Include="include\SDL_joystick.h" />
-    <ClInclude Include="include\SDL_keyboard.h" />
-    <ClInclude Include="include\SDL_keycode.h" />
-    <ClInclude Include="include\SDL_loadso.h" />
-    <ClInclude Include="include\SDL_log.h" />
-    <ClInclude Include="include\SDL_main.h" />
-    <ClInclude Include="include\SDL_messagebox.h" />
-    <ClInclude Include="include\SDL_mixer.h" />
-    <ClInclude Include="include\SDL_mouse.h" />
-    <ClInclude Include="include\SDL_mutex.h" />
-    <ClInclude Include="include\SDL_name.h" />
-    <ClInclude Include="include\SDL_opengl.h" />
-    <ClInclude Include="include\SDL_opengles.h" />
-    <ClInclude Include="include\SDL_opengles2.h" />
-    <ClInclude Include="include\SDL_opengles2_gl2.h" />
-    <ClInclude Include="include\SDL_opengles2_gl2ext.h" />
-    <ClInclude Include="include\SDL_opengles2_gl2platform.h" />
-    <ClInclude Include="include\SDL_opengles2_khrplatform.h" />
-    <ClInclude Include="include\SDL_opengl_glext.h" />
-    <ClInclude Include="include\SDL_pixels.h" />
-    <ClInclude Include="include\SDL_platform.h" />
-    <ClInclude Include="include\SDL_power.h" />
-    <ClInclude Include="include\SDL_quit.h" />
-    <ClInclude Include="include\SDL_rect.h" />
-    <ClInclude Include="include\SDL_render.h" />
-    <ClInclude Include="include\SDL_revision.h" />
-    <ClInclude Include="include\SDL_rwops.h" />
-    <ClInclude Include="include\SDL_scancode.h" />
-    <ClInclude Include="include\SDL_shape.h" />
-    <ClInclude Include="include\SDL_stdinc.h" />
-    <ClInclude Include="include\SDL_surface.h" />
-    <ClInclude Include="include\SDL_system.h" />
-    <ClInclude Include="include\SDL_syswm.h" />
-    <ClInclude Include="include\SDL_test.h" />
-    <ClInclude Include="include\SDL_test_assert.h" />
-    <ClInclude Include="include\SDL_test_common.h" />
-    <ClInclude Include="include\SDL_test_compare.h" />
-    <ClInclude Include="include\SDL_test_crc32.h" />
-    <ClInclude Include="include\SDL_test_font.h" />
-    <ClInclude Include="include\SDL_test_fuzzer.h" />
-    <ClInclude Include="include\SDL_test_harness.h" />
-    <ClInclude Include="include\SDL_test_images.h" />
-    <ClInclude Include="include\SDL_test_log.h" />
-    <ClInclude Include="include\SDL_test_md5.h" />
-    <ClInclude Include="include\SDL_test_random.h" />
-    <ClInclude Include="include\SDL_thread.h" />
-    <ClInclude Include="include\SDL_timer.h" />
-    <ClInclude Include="include\SDL_touch.h" />
-    <ClInclude Include="include\SDL_ttf.h" />
-    <ClInclude Include="include\SDL_types.h" />
-    <ClInclude Include="include\SDL_version.h" />
-    <ClInclude Include="include\SDL_video.h" />
+    <ClInclude Include="include\SDL\begin_code.h" />
+    <ClInclude Include="include\SDL\close_code.h" />
+    <ClInclude Include="include\SDL\SDL.h" />
+    <ClInclude Include="include\SDL\SDL_assert.h" />
+    <ClInclude Include="include\SDL\SDL_atomic.h" />
+    <ClInclude Include="include\SDL\SDL_audio.h" />
+    <ClInclude Include="include\SDL\SDL_bits.h" />
+    <ClInclude Include="include\SDL\SDL_blendmode.h" />
+    <ClInclude Include="include\SDL\SDL_clipboard.h" />
+    <ClInclude Include="include\SDL\SDL_config.h" />
+    <ClInclude Include="include\SDL\SDL_config_android.h" />
+    <ClInclude Include="include\SDL\SDL_config_iphoneos.h" />
+    <ClInclude Include="include\SDL\SDL_config_macosx.h" />
+    <ClInclude Include="include\SDL\SDL_config_minimal.h" />
+    <ClInclude Include="include\SDL\SDL_config_pandora.h" />
+    <ClInclude Include="include\SDL\SDL_config_psp.h" />
+    <ClInclude Include="include\SDL\SDL_config_windows.h" />
+    <ClInclude Include="include\SDL\SDL_config_winrt.h" />
+    <ClInclude Include="include\SDL\SDL_config_wiz.h" />
+    <ClInclude Include="include\SDL\SDL_copying.h" />
+    <ClInclude Include="include\SDL\SDL_cpuinfo.h" />
+    <ClInclude Include="include\SDL\SDL_egl.h" />
+    <ClInclude Include="include\SDL\SDL_endian.h" />
+    <ClInclude Include="include\SDL\SDL_error.h" />
+    <ClInclude Include="include\SDL\SDL_events.h" />
+    <ClInclude Include="include\SDL\SDL_filesystem.h" />
+    <ClInclude Include="include\SDL\SDL_gamecontroller.h" />
+    <ClInclude Include="include\SDL\SDL_gesture.h" />
+    <ClInclude Include="include\SDL\SDL_haptic.h" />
+    <ClInclude Include="include\SDL\SDL_hints.h" />
+    <ClInclude Include="include\SDL\SDL_image.h" />
+    <ClInclude Include="include\SDL\SDL_joystick.h" />
+    <ClInclude Include="include\SDL\SDL_keyboard.h" />
+    <ClInclude Include="include\SDL\SDL_keycode.h" />
+    <ClInclude Include="include\SDL\SDL_loadso.h" />
+    <ClInclude Include="include\SDL\SDL_log.h" />
+    <ClInclude Include="include\SDL\SDL_main.h" />
+    <ClInclude Include="include\SDL\SDL_messagebox.h" />
+    <ClInclude Include="include\SDL\SDL_mixer.h" />
+    <ClInclude Include="include\SDL\SDL_mouse.h" />
+    <ClInclude Include="include\SDL\SDL_mutex.h" />
+    <ClInclude Include="include\SDL\SDL_name.h" />
+    <ClInclude Include="include\SDL\SDL_opengl.h" />
+    <ClInclude Include="include\SDL\SDL_opengles.h" />
+    <ClInclude Include="include\SDL\SDL_opengles2.h" />
+    <ClInclude Include="include\SDL\SDL_opengles2_gl2.h" />
+    <ClInclude Include="include\SDL\SDL_opengles2_gl2ext.h" />
+    <ClInclude Include="include\SDL\SDL_opengles2_gl2platform.h" />
+    <ClInclude Include="include\SDL\SDL_opengles2_khrplatform.h" />
+    <ClInclude Include="include\SDL\SDL_opengl_glext.h" />
+    <ClInclude Include="include\SDL\SDL_pixels.h" />
+    <ClInclude Include="include\SDL\SDL_platform.h" />
+    <ClInclude Include="include\SDL\SDL_power.h" />
+    <ClInclude Include="include\SDL\SDL_quit.h" />
+    <ClInclude Include="include\SDL\SDL_rect.h" />
+    <ClInclude Include="include\SDL\SDL_render.h" />
+    <ClInclude Include="include\SDL\SDL_revision.h" />
+    <ClInclude Include="include\SDL\SDL_rwops.h" />
+    <ClInclude Include="include\SDL\SDL_scancode.h" />
+    <ClInclude Include="include\SDL\SDL_shape.h" />
+    <ClInclude Include="include\SDL\SDL_stdinc.h" />
+    <ClInclude Include="include\SDL\SDL_surface.h" />
+    <ClInclude Include="include\SDL\SDL_system.h" />
+    <ClInclude Include="include\SDL\SDL_syswm.h" />
+    <ClInclude Include="include\SDL\SDL_test.h" />
+    <ClInclude Include="include\SDL\SDL_test_assert.h" />
+    <ClInclude Include="include\SDL\SDL_test_common.h" />
+    <ClInclude Include="include\SDL\SDL_test_compare.h" />
+    <ClInclude Include="include\SDL\SDL_test_crc32.h" />
+    <ClInclude Include="include\SDL\SDL_test_font.h" />
+    <ClInclude Include="include\SDL\SDL_test_fuzzer.h" />
+    <ClInclude Include="include\SDL\SDL_test_harness.h" />
+    <ClInclude Include="include\SDL\SDL_test_images.h" />
+    <ClInclude Include="include\SDL\SDL_test_log.h" />
+    <ClInclude Include="include\SDL\SDL_test_md5.h" />
+    <ClInclude Include="include\SDL\SDL_test_random.h" />
+    <ClInclude Include="include\SDL\SDL_thread.h" />
+    <ClInclude Include="include\SDL\SDL_timer.h" />
+    <ClInclude Include="include\SDL\SDL_touch.h" />
+    <ClInclude Include="include\SDL\SDL_ttf.h" />
+    <ClInclude Include="include\SDL\SDL_types.h" />
+    <ClInclude Include="include\SDL\SDL_version.h" />
+    <ClInclude Include="include\SDL\SDL_video.h" />
+    <ClInclude Include="include\spdlog\async_logger.h" />
+    <ClInclude Include="include\spdlog\common.h" />
+    <ClInclude Include="include\spdlog\formatter.h" />
+    <ClInclude Include="include\spdlog\logger.h" />
+    <ClInclude Include="include\spdlog\spdlog.h" />
+    <ClInclude Include="include\spdlog\tweakme.h" />
+    <ClInclude Include="pugixml\pugiconfig.hpp" />
+    <ClInclude Include="pugixml\pugixml.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="pugixml\pugixml.cpp" />
+    <ClCompile Include="src\CBuzzCommand.cpp" />
     <ClCompile Include="src\CLTexture.cpp" />
     <ClCompile Include="src\CLWindow.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -138,7 +149,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)\include\SDL;$(ProjectDir)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\include\SDL;$(ProjectDir)\pugixml;$(ProjectDir)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
