--- a/SDL_custom_quizz_game/SDL_custom_quizz_game.vcxproj
+++ b/SDL_custom_quizz_game/SDL_custom_quizz_game.vcxproj
@@ -11,10 +11,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="include\CBuzzCommand.h" />
-    <ClInclude Include="include\CLTexture.h" />
-    <ClInclude Include="include\CLWindow.h" />
-    <ClInclude Include="include\CQuestions.h" />
     <ClInclude Include="include\SDL\begin_code.h" />
     <ClInclude Include="include\SDL\close_code.h" />
     <ClInclude Include="include\SDL\SDL.h" />
@@ -106,13 +102,26 @@
     <ClInclude Include="include\spdlog\tweakme.h" />
     <ClInclude Include="pugixml\pugiconfig.hpp" />
     <ClInclude Include="pugixml\pugixml.hpp" />
+    <ClInclude Include="src\CBuzzCommand.h" />
+    <ClInclude Include="src\CGameState.h" />
+    <ClInclude Include="src\CLTexture.h" />
+    <ClInclude Include="src\CLWindow.h" />
+    <ClInclude Include="src\CMenuState.h" />
+    <ClInclude Include="src\CQuestions.h" />
+    <ClInclude Include="src\CQuestionsState.h" />
+    <ClInclude Include="src\CQuizzGame.h" />
+    <ClInclude Include="src\CQuizzGameEngine.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pugixml\pugixml.cpp" />
     <ClCompile Include="src\CBuzzCommand.cpp" />
     <ClCompile Include="src\CLTexture.cpp" />
     <ClCompile Include="src\CLWindow.cpp" />
+    <ClCompile Include="src\CMenuState.cpp" />
     <ClCompile Include="src\CQuestions.cpp" />
+    <ClCompile Include="src\CQuestionsState.cpp" />
+    <ClCompile Include="src\CQuizzGame.cpp" />
+    <ClCompile Include="src\CQuizzGameEngine.cpp" />
     <ClCompile Include="src\main.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
@@ -151,7 +160,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)\include\SDL;$(ProjectDir)\pugixml;$(ProjectDir)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\include\SDL;$(ProjectDir)\pugixml;$(ProjectDir)\include;$(ProjectDir)\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
