--- a/SDL_custom_quizz_game/SDL_custom_quizz_game.vcxproj.filters
+++ b/SDL_custom_quizz_game/SDL_custom_quizz_game.vcxproj.filters
@@ -348,6 +348,12 @@
     <ClInclude Include="include\Game\CQuizzGameEngine.h">
       <Filter>Header Files\Game</Filter>
     </ClInclude>
+    <ClInclude Include="include\Game\BuzzButtons.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Game\CKeyboardCommad.h">
+      <Filter>Header Files\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\main.cpp">
@@ -385,6 +391,9 @@
     </ClCompile>
     <ClCompile Include="src\Graphics\CLWindow.cpp">
       <Filter>Source Files\Graphics</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Game\CkeyboardCommand.cpp">
+      <Filter>Source Files\Game</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
